03_ingress/cert-manager/prod-https-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-prod-ingress 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.naveen.in
    - httpd.naveen.in
    secretName: naveen-prod-tls
  rules:
  - host: nginx.naveen.in 
    http:
      paths:
        - path: /
          pathType: Prefix 
          backend: 
            service:
              name: nginx-service 
              port:
                number: 80
  - host: httpd.naveen.in 
    http:
      paths:
        - path: /
          pathType: Prefix 
          backend: 
            service:
              name: httpd-service 
              port:
                number: 80
