03_ingress/cert-manager/staging-https-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-staging-ingress 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx-staging.naveen.in
    - httpd-staging.naveen.in
    secretName: nextops-staging-tls
  rules:
  - host: nginx-staging.naveen.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service 
              port:
                number: 80 
  - host: httpd-staging.naveen.in
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: httpd-service 
              port:
                number: 80
